testsuite/tests/typecheck/should_fail/tcfail002.stderr

tcfail002.hs:4:7: error:
    • Couldn't match expected type ‘p’ with actual type ‘[p]’
    • In the expression: z
      In an equation for ‘c’: c z = z
    • Relevant bindings include
        z :: [p] (bound at tcfail002.hs:4:3)
        c :: [p] -> p (bound at tcfail002.hs:3:1)
